--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Responsive portfolio website Ansel</title>
+    <title>Responsive portfolio website Saeed</title>
   </head>
   <body>
     <!--=============== HEADER ===============-->
